--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "moment": "^2.29.1",
     "moment-duration-format": "^2.3.2",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "src": "^1.1.2"
   }
 }
