--- a/package.json
+++ b/package.json
@@ -21,16 +21,13 @@
     "@babel/eslint-parser": "^7.12.1",
     "@babel/preset-react": "^7.12.10",
     "@becode/eslint-config": "^0.12.1",
-    "autoprefixer": "^10.2.4",
     "eslint": "^7.18.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-unicorn": "^27.0.0",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.3",
-    "postcss-cli": "^8.3.1",
-    "prettier": "^2.2.1",
-    "tailwindcss": "^2.0.2"
+    "prettier": "^2.2.1"
   },
   "lint-staged": {
     "*.json": [
@@ -46,8 +43,6 @@
     }
   },
   "dependencies": {
-    "moment": "^2.29.1",
-    "moment-duration-format": "^2.3.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "src": "^1.1.2"
