--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
   "dependencies": {
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "src": "^1.1.2"
+    "src": "^1.1.2",
+    "moment": "^2.29.1",
+    "moment-duration-format": "^2.3.2"
   }
 }
